# prayer-time-index-generator

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: generator.rs  macros.rs  main.rs  params.rs  prelude.rs
src/v1/: domain.rs  dtos.rs  generator.rs  input_dtos.rs  mod.rs  output_dtos.rs  params.rs
