[package]
name = "prayer_time_index_generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ptig"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["preserve_order"] }
sha1 = "0.10.6"
